--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,7 @@ jobs:
           # Produce a binary artifact and place it in the mounted volume
           run: |
             apt update
-            apt install ninja-build curl build-essential -y
+            apt install ninja-build curl build-essential git -y
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             source $HOME/.cargo/env
             rustc --version
