--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,6 +40,7 @@ jobs:
             rustc --version
             cargo --version
             ./run
+            cp ./out /artifacts/ -r
 
       - name: Upload out directory
         uses: actions/upload-artifact@v3
