--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,7 +34,8 @@ jobs:
           run: |
             apt update
             apt install ninja-build curl build-essential git -y
-            git clone https://github.com/ankitects/anki . -b 24.06.3 --recursive
+            git clone https://github.com/ankitects/anki anki -b 24.06.3 --recursive
+            cd anki
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             source $HOME/.cargo/env
             rustc --version
