--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,46 +5,30 @@ on: [push, pull_request]
 jobs:
   build_job:
     # The host should always be linux
-    runs-on: ubuntu-22.04
-    name: Build on ${{ matrix.distro }} ${{ matrix.arch }}
+    runs-on: macos-latest
+    name: Build
 
     steps:
-      - uses: uraimo/run-on-arch-action@v2
-        name: Build artifact
-        id: build
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
-          arch: aarch64
-          distro: buster
+          repository: ankitects/anki
+          path: anki
 
-          # Create an artifacts directory
-          setup: |
-            mkdir -p "${PWD}/artifacts"
+      - name: Set up Docker
+        run: |
+          docker pull debian:10
 
-          # Mount the artifacts directory as /artifacts in the container
-          dockerRunArgs: |
-            --volume "${PWD}/artifacts:/artifacts"
+      - name: Run in Docker
+        run: |
+          docker run --rm -v ${{ github.workspace }}/anki:/app -w /app debian:10 bash -c "
+          apt-get update && \
+          apt-get install -y rustc cargo ninja-build && \
+          ./tools/run-qt5.15
+          "
 
-          # The shell to run commands with in the container
-          shell: /bin/bash
-
-          env: | # YAML, but pipe character is necessary
-            RUST_BACKTRACE: 1
-
-          # Produce a binary artifact and place it in the mounted volume
-          run: |
-            apt update
-            apt install ninja-build curl build-essential git -y
-            git clone https://github.com/ankitects/anki anki -b 24.06.3 --recursive
-            cd anki
-            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-            source $HOME/.cargo/env
-            rustc --version
-            cargo --version
-            ./tools/run-qt5.15
-            cp ./out /artifacts/ -r
-
-      - name: Upload out directory
-        uses: actions/upload-artifact@v3
+      - name: Upload Output
+        uses: actions/upload-artifact@v2
         with:
-          name: out-files
-          path: "${PWD}/artifacts/out"
+          name: out
+          path: anki/out
