--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,7 +51,7 @@ jobs:
             source $HOME/.cargo/env
             rustc --version
             cargo --version
-            ./run
+            ./tools/run-qt5.14
             cp ./out /artifacts/ -r
 
       - name: Upload out directory
