--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,14 +21,21 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          push: false
+          push: true
           tags: test:latest
           platforms: linux/arm64
+          load: true
 
       - name: Copy out directory from the image
         run: |
