--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,12 +34,11 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: test:latest
-          platforms: linux/arm64
           load: true
 
       - name: Copy out directory from the image
         run: |
-          docker create --name temp-container --platform linux/arm64 test:latest
+          docker create --name temp-container test:latest
           docker cp temp-container:/data/out ./out
           docker rm temp-container
 
