--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,12 +34,12 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
-          # platforms: linux/arm64
+          platforms: linux/arm64
           load: true
 
       - name: Copy out directory from the image
         run: |
-          docker create --name temp-container ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
+          docker create --name temp-container --platform linux/arm64 ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
           docker cp temp-container:/data/out ./out
           docker rm temp-container
 
