--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,17 +34,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
-          platforms: linux/arm64
-          load: true
-
-      - name: Copy out directory from the image
-        run: |
-          docker create --name temp-container --platform linux/arm64 ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
-          docker cp temp-container:/data/out ./out
-          docker rm temp-container
-
-      - name: Upload out directory
-        uses: actions/upload-artifact@v3
-        with:
-          name: out-files
-          path: "${PWD}/out"
+          # platforms: linux/arm64
