--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,4 +44,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
-          platforms: linux/arm64
+          # platforms: linux/arm64
