--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,3 +45,31 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
           # platforms: linux/arm64
+
+  pull_docker_image:
+    runs-on: ubuntu-latest
+    needs: build_job  
+    
+    steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Pull Docker image
+        run: |
+          container_id=$(docker create "ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}")
+          docker cp "$container_id:/data/out/wheels" "."
+          docker rm "$container_id"
+      - uses: actions/upload-artifact@v4
+        with: 
+          path: ./wheels
