--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,7 +44,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.actor }}/test:${{ github.run_number	}}
-          platform: linux/arm64
+          platforms: linux/arm64
 
   pull_docker_image:
     runs-on: ubuntu-latest
